Updated Server and started EJS

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -9,8 +9,8 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
-        <h1>YO</h1>
-         <h1>Its the weekend</h1>
+        <h1>its's a <%= kindOfDay %></h1>
+         
         
         <script src="" async defer></script>
     </body>
