--- a/views/list.ejs
+++ b/views/list.ejs
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
-        <h1>its's a <%= kindOfDay %></h1>
+        <h1>Its's a <%= kindOfDay %>!</h1>
          
         
         <script src="" async defer></script>
