--- a/views/list.ejs
+++ b/views/list.ejs
@@ -9,9 +9,29 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
-        <h1>Its's a <%= kindOfDay %>!</h1>
+
+    <h1> <%= kindOfDay %> </h1>
          
-        
+    <ul>
+    
+    <% for (var i=0; i<newListItems.length; i++) { %>
+        <li> <%= newListItems[i] %> </li>
+    <% } %>
+
+
+
+    </ul>
+
+    <form action="/" method="post">
+
+        <input type="text" name="newItem">
+
+        <button type="submit" name="button">Add</button>
+
+    </form>
+
+
+
         <script src="" async defer></script>
     </body>
 </html>
