--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,14 +1,4 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>To-do List</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="css/styles.css">
-    </head>
-    <body>
+<%- include("header") -%>
 
         <div class="box" id="heading">
             <h1> <%= listTitle %> </h1>
@@ -23,19 +13,9 @@
             <% } %>
 
             <form class="item" action="/" method="post">
-
-                <input type="text" name="newItem" placeholder="New Item" autocomplete="off">
-        
-                <button type="submit" name="button">+</button>
-        
+                <input type="text" name="newItem" placeholder="New Item" autocomplete="off"> 
+                <button type="submit" name="list" value=<%= listTitle %>>+</button>
             </form>
         </div>     
 
-
-
-
-
-
-        <script src="" async defer></script>
-    </body>
-</html>
+<%- include("footer") -%>        
